; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_files.c_patchfiles_cb.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_files.c_patchfiles_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32 }
%struct.TYPE_13__ = type { i32, %struct.TYPE_11__*, i32, i32 }
%struct.TYPE_11__ = type { i64, i32, %struct.TYPE_14__* }
%struct.TYPE_14__ = type { i64, i32, i32 }

@MSICABEXTRACT_BEGINEXTRACT = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@INSTALLSTATE_LOCAL = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [48 x i8] c"file %s component %s not installed or disabled\0A\00", align 1
@MSICABEXTRACT_FILEEXTRACTED = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_12__*, i32, i64, i32*, i64*, i64)* @patchfiles_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @patchfiles_cb(%struct.TYPE_12__* %0, i32 %1, i64 %2, i32* %3, i64* %4, i64 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_12__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i64*, align 8
  %13 = alloca i64, align 8
  %14 = alloca %struct.TYPE_13__*, align 8
  %15 = alloca %struct.TYPE_14__*, align 8
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %8, align 8
  store i32 %1, i32* %9, align 4
  store i64 %2, i64* %10, align 8
  store i32* %3, i32** %11, align 8
  store i64* %4, i64** %12, align 8
  store i64 %5, i64* %13, align 8
  %16 = load i64, i64* %13, align 8
  %17 = inttoptr i64 %16 to %struct.TYPE_13__**
  %18 = load %struct.TYPE_13__*, %struct.TYPE_13__** %17, align 8
  store %struct.TYPE_13__* %18, %struct.TYPE_13__** %14, align 8
  %19 = load i64, i64* %10, align 8
  %20 = load i64, i64* @MSICABEXTRACT_BEGINEXTRACT, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %94

22:                                               ; preds = %6
  %23 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %24 = load %struct.TYPE_13__*, %struct.TYPE_13__** %14, align 8
  %25 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %24, i32 0, i32 3
  %26 = load i32, i32* %25, align 4
  %27 = call i64 @is_registered_patch_media(%struct.TYPE_12__* %23, i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %37, label %29

29:                                               ; preds = %22
  %30 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %31 = load %struct.TYPE_13__*, %struct.TYPE_13__** %14, align 8
  %32 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %31, i32 0, i32 3
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* %9, align 4
  %35 = call %struct.TYPE_13__* @find_filepatch(%struct.TYPE_12__* %30, i32 %33, i32 %34)
  store %struct.TYPE_13__* %35, %struct.TYPE_13__** %14, align 8
  %36 = icmp ne %struct.TYPE_13__* %35, null
  br i1 %36, label %39, label %37

37:                                               ; preds = %29, %22
  %38 = load i32, i32* @FALSE, align 4
  store i32 %38, i32* %7, align 4
  br label %105

39:                                               ; preds = %29
  %40 = load %struct.TYPE_13__*, %struct.TYPE_13__** %14, align 8
  %41 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %40, i32 0, i32 1
  %42 = load %struct.TYPE_11__*, %struct.TYPE_11__** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %42, i32 0, i32 2
  %44 = load %struct.TYPE_14__*, %struct.TYPE_14__** %43, align 8
  store %struct.TYPE_14__* %44, %struct.TYPE_14__** %15, align 8
  %45 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %46 = load %struct.TYPE_14__*, %struct.TYPE_14__** %15, align 8
  %47 = call i64 @msi_get_component_action(%struct.TYPE_12__* %45, %struct.TYPE_14__* %46)
  %48 = load %struct.TYPE_14__*, %struct.TYPE_14__** %15, align 8
  %49 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %48, i32 0, i32 0
  store i64 %47, i64* %49, align 8
  %50 = load %struct.TYPE_14__*, %struct.TYPE_14__** %15, align 8
  %51 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %50, i32 0, i32 2
  %52 = load i32, i32* %51, align 4
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %54, label %60

54:                                               ; preds = %39
  %55 = load %struct.TYPE_14__*, %struct.TYPE_14__** %15, align 8
  %56 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %55, i32 0, i32 0
  %57 = load i64, i64* %56, align 8
  %58 = load i64, i64* @INSTALLSTATE_LOCAL, align 8
  %59 = icmp ne i64 %57, %58
  br i1 %59, label %60, label %73

60:                                               ; preds = %54, %39
  %61 = load %struct.TYPE_13__*, %struct.TYPE_13__** %14, align 8
  %62 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %61, i32 0, i32 1
  %63 = load %struct.TYPE_11__*, %struct.TYPE_11__** %62, align 8
  %64 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %63, i32 0, i32 1
  %65 = load i32, i32* %64, align 8
  %66 = call i32 @debugstr_w(i32 %65)
  %67 = load %struct.TYPE_14__*, %struct.TYPE_14__** %15, align 8
  %68 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %67, i32 0, i32 1
  %69 = load i32, i32* %68, align 8
  %70 = call i32 @debugstr_w(i32 %69)
  %71 = call i32 @TRACE(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i32 %66, i32 %70)
  %72 = load i32, i32* @FALSE, align 4
  store i32 %72, i32* %7, align 4
  br label %105

73:                                               ; preds = %54
  %74 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %75 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %74, i32 0, i32 0
  %76 = load i32, i32* %75, align 4
  %77 = call i32 @msi_create_temp_file(i32 %76)
  %78 = load %struct.TYPE_13__*, %struct.TYPE_13__** %14, align 8
  %79 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %78, i32 0, i32 2
  store i32 %77, i32* %79, align 8
  %80 = load %struct.TYPE_13__*, %struct.TYPE_13__** %14, align 8
  %81 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %80, i32 0, i32 2
  %82 = load i32, i32* %81, align 8
  %83 = call i32 @strdupW(i32 %82)
  %84 = load i32*, i32** %11, align 8
  store i32 %83, i32* %84, align 4
  %85 = load %struct.TYPE_13__*, %struct.TYPE_13__** %14, align 8
  %86 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %85, i32 0, i32 1
  %87 = load %struct.TYPE_11__*, %struct.TYPE_11__** %86, align 8
  %88 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %87, i32 0, i32 0
  %89 = load i64, i64* %88, align 8
  %90 = load i64*, i64** %12, align 8
  store i64 %89, i64* %90, align 8
  %91 = load %struct.TYPE_13__*, %struct.TYPE_13__** %14, align 8
  %92 = load i64, i64* %13, align 8
  %93 = inttoptr i64 %92 to %struct.TYPE_13__**
  store %struct.TYPE_13__* %91, %struct.TYPE_13__** %93, align 8
  br label %103

94:                                               ; preds = %6
  %95 = load i64, i64* %10, align 8
  %96 = load i64, i64* @MSICABEXTRACT_FILEEXTRACTED, align 8
  %97 = icmp eq i64 %95, %96
  br i1 %97, label %98, label %102

98:                                               ; preds = %94
  %99 = load i32, i32* @TRUE, align 4
  %100 = load %struct.TYPE_13__*, %struct.TYPE_13__** %14, align 8
  %101 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %100, i32 0, i32 0
  store i32 %99, i32* %101, align 8
  br label %102

102:                                              ; preds = %98, %94
  br label %103

103:                                              ; preds = %102, %73
  %104 = load i32, i32* @TRUE, align 4
  store i32 %104, i32* %7, align 4
  br label %105

105:                                              ; preds = %103, %60, %37
  %106 = load i32, i32* %7, align 4
  ret i32 %106
}

declare dso_local i64 @is_registered_patch_media(%struct.TYPE_12__*, i32) #1

declare dso_local %struct.TYPE_13__* @find_filepatch(%struct.TYPE_12__*, i32, i32) #1

declare dso_local i64 @msi_get_component_action(%struct.TYPE_12__*, %struct.TYPE_14__*) #1

declare dso_local i32 @TRACE(i8*, i32, i32) #1

declare dso_local i32 @debugstr_w(i32) #1

declare dso_local i32 @msi_create_temp_file(i32) #1

declare dso_local i32 @strdupW(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
